    - initial build of the petname project
  * === added directory src, === removed directory pkg, === renamed
    directory pkg/petname => src/petname, src/petname/Makefile,
    src/petname/petname_test.go:
    - add a basic test case
    - add a basic Makefile
  * === added directory src/petname_cmd, src/petname_cmd/Makefile,
    src/petname_cmd/petname_cmd.go, src/petname/Makefile,
    src/petname/petname.go.in, src/petname/petname_test.go:
    - add Apache2 license headers
    - add a standalone go binary that uses the library
    - build
  * debian/control, debian/golang-petname-dev.install, debian/install =>
    debian/petname.install, debian/rules, Makefile,
    src/petname_cmd/Makefile, src/petname/Makefile:
    - create a golang dev library for petname
    - create a standalone go binary for petname
    - adjust build process
  * src/petname_cmd/petname_cmd.go:
    - support --words and --separator flags on command line
  * === added directory usr/lib, debian/petname.install, === removed
    directory etc, === removed directory usr/bin, === renamed directory
    etc/petname => usr/lib/petname, usr/bin/petname:
    - move our wordlists to /usr/lib/petname, out of configurable /etc
  * debian/control, debian/python-petname.install, Makefile,
    src/petname/__init__.py, src/petname/Makefile,
    src/petname/petname.py.in, src/petname/update.sh:
    - add a python library, too
  * === added directory github.com, === added directory
    github.com/petname, github.com/petname/petname/update.sh, ===
    removed directory src, === renamed directory src/petname_cmd =>
    github.com/petname/petname_cmd, === renamed directory src/petname =>
    github.com/petname/petname:
    - reorg the dir structure for better golang packaging
  * === renamed directory github.com/petname =>
    github.com/dustinkirkland:
    - adjust package github location

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 13 Dec 2014 11:27:59 -0600