@@ -7,7 +7,7 @@ PKG="petname"
 cp -f ${PKG}.go.in ${PKG}.go.unf
 cp -f ${PKG}.py.in ${PKG}.py.unf
 
-for f in ../../../usr/lib/$PKG/*; do
+for f in usr/lib/$PKG/*; do
 	filename=$(basename "$f")
 	rm -f "$filename"
 	for w in $(cat "$f"); do
@@ -19,7 +19,7 @@ for f in ../../../usr/lib/$PKG/*; do
 	rm -f "$filename"
 done
 gofmt ${PKG}.go.unf > ${PKG}.go
-#autopep8 ${PKG}.py.unf > ${PKG}.py
+autopep8 ${PKG}.py.unf > ${PKG}.py
 rm -f ${PKG}.go.unf ${PKG}.py.unf
 go build ${PKG}.go
 python -m py_compile ${PKG}.py
